plex-server/services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: plex-service
  namespace: plex-server
  labels:
    app: plex
spec:
  type: LoadBalancer # Cambia a LoadBalancer si usas un proveedor de nube compatible
  ports:
    - port: 32400
      targetPort: 32400
      protocol: TCP
      nodePort: 32400 # Opcional, especifica un puerto en el nodo
  selector:
    app: plex
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: plex-server
spec:
  selector:
    app: qbittorrent
    part-of: qbittorrent
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: qbittorrent
---
apiVersion: v1
kind: Service
metadata:
  name: jackett-service
  namespace: plex-server
spec:
  selector:
    app: jackett
  type: ClusterIP
  ports:
    - port: 9117
      targetPort: jackett
